trunk/Archive2/73/f65f2f781c1b61/output
main.cpp:55:6: error: declaration conflicts with target of using declaration already in scope
void report_error(std::exception_ptr eptr) {
     ^
main.cpp:20:6: note: target of using declaration
void report_error(std::exception_ptr eptr) {
     ^
main.cpp:49:15: note: using declaration
using A::Log::report_error;
              ^
1 error generated.
